--- a/src/reader/basalt.css
+++ b/src/reader/basalt.css
@@ -1,19 +1,22 @@
 body {
     background: darkslateblue;
+    color: gold;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 header {
     background: slateblue;
+    color: black;
     padding: 10px;
 }
 
 footer {
     background: slateblue;
+    color: black;
     padding: 10px;
     margin-top: auto;
 }
